Fix annoying scrollbars on networking-iframes.html

--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
 iframe {
   border: none;
 }
+.iframe-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  overflow: hidden;
+}
 #main {
   margin: 0 auto;
   position: relative;
